# blank-app

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
controller/: cache.py  data_structures.py  resume_controller.py  resume_docx_generator.py  resume_pdf_generator.py  resume_png_generator.py
data/: resume_data.py  resume_data_ru.py
docs/: cache_and_performance.md
locales/: compile_mo.sh  localization.py
locales/translations/RUS/LC_MESSAGES/: messages.mo  messages.po
pages/: base_page.py  resume_page.py
pages/styles/: main.css
