[project]
name = "cv-swe"
version = "1.0.0"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (Streamlit patterns)
    "UP007",  # use X | Y for union types (keep for older readability)
]

[tool.ruff.lint.isort]
known-first-party = ["controller", "data", "locales", "pages"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
check_untyped_defs = true

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
fail-under = 80
verbose = 1
exclude = ["venv", ".venv"]

[tool.vulture]
min_confidence = 80
exclude = ["venv", ".venv"]

[tool.bandit]
exclude_dirs = ["venv", ".venv"]
skips = ["B101"]
